# dig-service

./: .gitignore  Cargo.toml  README.md
docs/resources/: SPEC.md
src/: error.rs  handle.rs  lib.rs  shutdown.rs  tasks.rs  testing.rs  traits.rs
tests/: lifecycle.rs  shutdown.rs
